Agrego soluciones de la practica 4 de Complementos II

--- a/4 Ano/Complementos de Matematica II/Soluciones/Practica 2.lyx
+++ b/4 Ano/Complementos de Matematica II/Soluciones/Practica 2.lyx
@@ -1419,7 +1419,7 @@ Veamos primero que si
 \begin_inset Formula $f$
 \end_inset
 
- es isomorfimo de retículo tambien lo es 
+ es isomorfimo de retículo también lo es 
 \begin_inset Formula $f^{-1}$
 \end_inset
 
@@ -1453,7 +1453,7 @@ f^{-1}\left(a'\lor'b'\right)=a\lor b=f^{-1}\left(a'\right)\lor f^{-1}\left(b'\ri
 
 \begin_deeper
 \begin_layout Standard
-Analogamente para 
+Análogamente para 
 \begin_inset Formula $a\land b$
 \end_inset
 
@@ -1536,11 +1536,11 @@ Sean
 \begin_inset Formula $X\cup Y$
 \end_inset
 
- estan en 
+ están en 
 \begin_inset Formula $\mathcal{P}\left(A\right)$
 \end_inset
 
-; o lo que es lo mismo, que estan contenidos en 
+; o lo que es lo mismo, que están contenidos en 
 \begin_inset Formula $A$
 \end_inset
 
@@ -1707,7 +1707,7 @@ Veamos que
 \begin_inset Formula $f$
 \end_inset
 
- es monotona 
+ es monótona 
 \begin_inset Formula $f\left(y\right)\sqsubseteq f\left(x\right)$
 \end_inset
 
@@ -1728,7 +1728,7 @@ Veamos que
 \begin_inset Formula $y$
 \end_inset
 
- es la mayor de las cotas inferores de 
+ es la mayor de las cotas inferiores de 
 \begin_inset Formula $D$
 \end_inset
 
@@ -1759,7 +1759,7 @@ Veamos que
 \begin_inset Formula $f$
 \end_inset
 
- es monotona resulta 
+ es monótona resulta 
 \begin_inset Formula $f\left(y\right)\sqsubseteq f\left(x\right)$
 \end_inset
 
